--- a/src/app/views/lawn/lawn.component.html
+++ b/src/app/views/lawn/lawn.component.html
@@ -1,8 +1,8 @@
 <ng-container class="lawn" *ngFor="let field of lawnFields;">
   <div class="lawn-field">
-    <span>X: {{field.position.x}} | Y: {{field.position.y}}</span>
+    <span>x: {{field.position.x}} y: {{field.position.y}}</span>
     <br>
-    <span class="mower" *ngIf="field.mower">M << {{field.mower.mowerPostion.direction}}>></span>
+    <span class="mower" *ngIf="field.mower">M{{field.mower.id}} <<{{field.mower.mowerPostion.direction}}>></span>
   </div>
   <br *ngIf="makeNewRow(field)">
 
@@ -22,8 +22,8 @@
 
 <ul class="mower-list">
   Mower List:
-  <li *ngFor="let mower of mowers; let i = index;" class="mower">
-    Mower {{i + 1}}
+  <li *ngFor="let mower of mowers" class="mower">
+    Mower {{mower.id}}
     <input #commandField type="text" value="" size="20">
     <button (click)="moveMower(commandField, mower)">Move</button>
   </li>
