--- a/src/app/views/lawn/lawn.component.html
+++ b/src/app/views/lawn/lawn.component.html
@@ -1,30 +1,35 @@
-<ng-container class="lawn" *ngFor="let field of lawnFields;">
-  <div class="lawn-field">
-    <span>x: {{field.position.x}} y: {{field.position.y}}</span>
+<div class="clearfix">
+  <div class="float-right">
+    <label>Create Mower:</label> <br>
+    <input #x type="text" placeholder="x" value="" size="5">
+    <input #y type="text" placeholder="y" value="" size="5">
+    <input #d type="text" placeholder="N/E/W/S" value="" size="5">
+    <button (click)="addMower({x : x.value, y: y.value, direction:  d.value})">Create</button>
+  
     <br>
-    <span class="mower" *ngIf="field.mower">M{{field.mower.id}} <<{{field.mower.mowerPostion.direction}}>></span>
+    <br>
+  
+    <ul class="mower-list">
+      Mower List:
+      <li *ngFor="let mower of mowers" class="mower">
+        Mower {{mower.id}}
+        <input #commandField type="text" value="" size="20">
+        <button (click)="moveMower(commandField, mower)">Move</button>
+      </li>
+    </ul>
+  
   </div>
-  <br *ngIf="makeNewRow(field)">
+  
+  
+  <ng-container class="lawn" *ngFor="let field of lawnFields;">
+    <div class="lawn-field">
+      <span>x: {{field.position.x}} y: {{field.position.y}}</span>
+      <br>
+      <span class="mower" *ngIf="field.mower">M{{field.mower.id}} <<{{field.mower.mowerPostion.direction}}>></span>
+    </div>
+    <br *ngIf="makeNewRow(field)">
 
-</ng-container>
+  </ng-container>
 
-<br>
-<br>
-
-<label>Create Mower:</label> <br>
-<input #x type="text" placeholder="x" value="0" size="5">
-<input #y type="text" placeholder="y" value="0" size="5">
-<input #d type="text" placeholder="N/E/W/S" value="N" size="5">
-<button (click)="addMower({x : x.value, y: y.value, direction:  d.value})">Create</button>
-
-<br>
-<br>
-
-<ul class="mower-list">
-  Mower List:
-  <li *ngFor="let mower of mowers" class="mower">
-    Mower {{mower.id}}
-    <input #commandField type="text" value="" size="20">
-    <button (click)="moveMower(commandField, mower)">Move</button>
-  </li>
-</ul>
+  <br>
+  <br>
